finish working on supply navigation and UI

--- a/styles/Stock.module.css
+++ b/styles/Stock.module.css
@@ -13,3 +13,9 @@
 .add_empty {
   cursor: pointer;
 }
+.desc {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  height: 2rem;
+  white-space: nowrap;
+}
