--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -13,3 +13,32 @@
   z-index: -1;
   text-align: center;
 }
+.card_container {
+  width: 48%;
+  height: 30%;
+  padding: 16px;
+  color: rgba(0, 0, 0, 0.87);
+  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  border-radius: 5px;
+}
+.card_header {
+  width: 95%;
+}
+.card_container hr {
+  height: 1px;
+  background-color: rgba(0, 0, 0, 0.12);
+}
+.cards_container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+.value {
+  text-align: center;
+  overflow-wrap: break-word;
+  margin: auto 0;
+  word-wrap: break-word;
+}
