--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,7 +14,7 @@
   text-align: center;
 }
 .card_container {
-  width: 48%;
+  width: 100%;
   height: 30%;
   padding: 16px;
   color: rgba(0, 0, 0, 0.87);
@@ -23,10 +23,12 @@
   border-radius: 5px;
 }
 .card_header {
-  width: 95%;
+  width: 100%;
+  margin: 0;
 }
 .card_container hr {
   height: 1px;
+  width: 100%;
   background-color: rgba(0, 0, 0, 0.12);
 }
 .cards_container {
